[package]
name = "edge-gpt"
version = "0.2.0"
edition = "2021"
description = "Non official BingAI Rust client library. Use at your own risk."
license = "Unlicense"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
serde_json = "1.0"
cookie = "0.16.2"
isahc = { version = "1.7.2", features = ["cookies", "json"] }
futures-util = "0.3.28"
uuid = { version = "1.3.0", features = ["v4"] }
base64 = "0.21.0"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
ezio = "0.1.2"
clap = { version = "4.2.1", features = ["derive"] }
